--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 frontend/node_modules/
 frontend/.pnp
 frontend/.pnp.js
+frontend/package-lock.json
 
 # testing
 frontend/coverage
@@ -30,3 +31,4 @@ yarn-error.log*
 ### back-end
 # dependencies
 backend/node_modules/
+backend/package-lock.json
