--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
   },
