auth backend done

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://memetations:jKvaOIRKQuniRMvJ@santa-nossa.jzn3z.mongodb.net/tryout?retryWrites=true&w=majority
+KEY=b163913f7c8ace6b845e5ff02d194d80
+JWT_KEY=516468175e1c91da9600f26ce5e9c068
