--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5"
   },
   "devDependencies": {
