--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # misc
 .vscode
 
@@ -7,7 +5,6 @@
 # dependencies
 node_modules
 package-lock.json
-package.json
 
 ### front-end
 # dependencies
@@ -36,7 +33,7 @@ yarn-error.log*
 
 ### back-end
 # dependencies
-backend/node_modules/
-backend/package-lock.json
+node_modules/
+package-lock.json
 
 .env
